--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -45,19 +45,19 @@
           </ul>
         </div>
         <div class="flex items-center gap-6">
-          <ion-icon onclick="onToggleMenu(this)" name="menu"
+          <ion-icon class="absolute z-[100] text-3xl" onclick="onToggleMenu(this)" name="menu"
             class="text-3xl cursor-pointer lg:hidden text-slate-800 hover:text-slate-200 transition-all duration-100 ease-in"></ion-icon>
         </div>
     </header>
 
     <!-- Video Background Section -->
     <section class="bg-slate-200 overflow-hidden w-[100vw] h-[100vh] ">
-      <div class="absolute top-[12.3%] bottom-[-150px] overflow-hidden w-[100vw] left-0 right-0 bg-gradient-to-t from-slate-200 z-[2]"><img src="../Graphics/Gradient.png" alt=""></div>
-      <div class="absolute top-[12.3%] bottom-[-150px] overflow-hidden w-[100vw] left-0 right-0 bg-gradient-to-b from-slate-200 z-[1]"></div>
-      <div class="absolute top-[12.3%] bottom-[-150px] overflow-hidden w-[100vw] left-0 right-0 bg-gradient-to-t from-slate-200 z-[1]"></div>
-      <div class="absolute top-[12.3%] bottom-[-150px] overflow-hidden w-[100vw] left-0 right-0 bg-slate-800 bg-opacity-30"></div>
-      <div class=" w-[100vw] h-[100vh] overflow-hidden">
-        <video muted autoplay inlines-play loop class=" object-cover w-[100vw] h-[100vh] overflow-hidden absolute z-[0]" src="OFPPT - Une formation de qualité pour des métiers d'avenir (1).mp4" class="vid"></video>    
+      <div class="absolute top-0 bottom-[-120px] overflow-hidden w-[100vw] left-0 right-0 bg-gradient-to-t from-slate-200 z-[2]"><img src="../Graphics/Gradient.png" alt=""></div>
+      <div class="absolute top-0 bottom-[-120px] overflow-hidden w-[100vw] left-0 right-0 bg-gradient-to-b from-slate-200 z-[1]"></div>
+      <div class="absolute top-0 bottom-[-120px] overflow-hidden w-[100vw] left-0 right-0 bg-gradient-to-t from-slate-200 z-[1]"></div>
+      <div class="absolute top-0 bottom-[-120px] overflow-hidden w-[100vw] left-0 right-0 bg-slate-800 bg-opacity-30"></div>
+      <div class=" w-[100vw] h-[100vh] abssolute  top-0 overflow-hidden">
+        <video muted autoplay inlines-play loop class=" object-cover w-[100vw] h-[100vh]  top-0 overflow-hidden absolute z-[0]" src="OFPPT - Une formation de qualité pour des métiers d'avenir (1).mp4" class="vid"></video>    
       </div>
       <div class="overflow-hidden absolute top-[10%] left-0 right-0 bottom-0 w-full h-full text-center text-6xl font-black text-slate-800 z-10 flex items-center tracking-widest justify-center">
                 GALLERY<span class="text-[#00D897]">.</spa>
