--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </li>
                     <li class=" transition-all duration-200 ease-in-out p-2 hover:bg-[#00D897] lg:hover:bg-opacity-50">
                         <a class="text-slate-800  transition-all ease-in"
-                            href="#">Activities</a>
+                            href="./Pages/activities.html">Activities</a>
                     </li>
                     <li class=" transition-all duration-200 ease-in-out p-2 hover:bg-[#00D897] lg:hover:bg-opacity-50">
                         <a class="text-slate-800  transition-all ease-in"
