--- a/Pages/about.html
+++ b/Pages/about.html
@@ -180,7 +180,7 @@
             <button id="faq-tab" data-tabs-target="#faq" type="button" role="tab" aria-controls="faq" aria-selected="false" class="inline-block w-full p-4  bg-gray-50 hover:bg-gray-100 focus:outline-none dark:bg-gray-700 dark:hover:bg-gray-600">FAQ</button>
         </li>
     </ul>
-    <div id="fullWidthTabContent" class="border-t border-gray-200 border-gray-600">
+    <div id="fullWidthTabContent" class="border-t border-gray-200">
         <div class=" p-5 bg-white  md:p-2 dark:bg-gray-800" id="stats" role="tabpanel" aria-labelledby="stats-tab">
             <dl class="grid max-w-screen-xl grid-cols-3 gap-12 p-4 mx-auto text-gray-900 sm:grid-cols-3  dark:text-white sm:p-8">
                 <div class="flex flex-col items-center justify-center">
