--- a/Pages/about.html
+++ b/Pages/about.html
@@ -285,8 +285,8 @@
 
     <!-- Informations -->
     <section class="info_background">
-        <div class="my-10 py-20 bg-slate-300">
-            <div class="text-xl uppercase py-10 font-black text-center text-slate-800 tracking-widest">
+        <div class="my-10 py-20 bg-slate-200">
+            <div class="text-4xl uppercase py-10 font-black text-center text-slate-800 tracking-widest">
                 Informations<span class="text-[#00D897]">.</span></div>
             <div class="space-y-32">
 
@@ -299,7 +299,7 @@
                             sur des métiers du Digital et
                             Intelligence Artificielle, de la Gestion et Commerce en plus du Génie électrique et
                             mécanique.</div>
-                        <div class="w-full flex items-center"><img src="../Graphics/School.png" alt=""></div>
+                        <div class="plan w-full flex items-center"><img src="../Graphics/School.png" alt=""></div>
                     </div>
                 </div>
 
