--- a/Pages/about.html
+++ b/Pages/about.html
@@ -15,42 +15,43 @@
 
 <body class="overflow-x-hidden background bg-slate-200 font-[Montserrat]">
     <!-- Navigation Bar -->
-    <header class="container mx-auto transition-all duration-300 ease-in-out">
-        <nav class="flex justify-between items-center py-8 mx-auto">
+    <header class="z-50 container mx-auto transition-all duration-300 ease-in-out px-5">
+        <nav class="z-50 flex justify-between items-center py-8 mx-auto">
             <div
-                class="uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
+                class="z-50 uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
                 <a href="../index.html">
                     ista<br>Zenata<span class="text-white">.</span>
                 </a>
             </div>
             <div
-                class="container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
-                <ul class="flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
-                        <a class="text-slate-800  transition-all ease-in" href="../index.html">Home</a>
+                class="z-50 container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
+                <ul class="z-50 flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
+                    <li class="z-50 transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800 z-50  transition-all ease-in" href="../index.html">Home</a>
                     </li>
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
-                        <a class="text-slate-800   transition-al  ease-in" href="./about.html">About</a>
+                    <li class="z-50 transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800 z-50   transition-al  ease-in" href="./about.html">About</a>
                     </li>
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
-                        <a class="text-slate-800  transition-all ease-in" href="#">Activities</a>
+                    <li class="z-50 transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800 z-50  transition-all ease-in" href="#">Activities</a>
                     </li>
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
-                        <a class="text-slate-800  transition-all ease-in" href="./gallery.html">Gallery</a>
+                    <li class="z-50 transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800 z-50  transition-all ease-in" href="./gallery.html">Gallery</a>
                     </li>
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
-                        <a class="text-slate-800  transition-all ease-in" href="./contact.html">Contact</a>
+                    <li class="z-50 transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                        <a class="text-slate-800 z-50  transition-all ease-in" href="./contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
             <div class="flex items-center gap-6">
-                <ion-icon onclick="onToggleMenu(this)" name="menu"
+                <ion-icon class="lg:hidden z-50 text-3xl" onclick="onToggleMenu(this)" name="menu"
                     class="text-3xl cursor-pointer lg:hidden text-slate-800 hover:text-slate-200 transition-all duration-100 ease-in"></ion-icon>
             </div>
     </header>
 
     <!-- Ofppt Section -->
     <section class="py-20">
+        <div class="absolute z-[0] top-0 left-0 right-0 bottom-0"><img src="../Graphics/Gradient.png" alt=""></div>
         <div class="container mx-auto ">
             <div class="text-center text-4xl font-black text-slate-800 ">About<span class="text-[#00D897]">.</spa>
             </div>
