--- a/Pages/about.html
+++ b/Pages/about.html
@@ -161,9 +161,9 @@
     <!-- Our Commitement -->
     <section class="h-full">
         <div class="container mx-auto justify-center items-center h-full text-slate-800 ">
-            <div class="text-4xl uppercase py- font-black text-center">Our Commitement <span class="text-[#00D897]">.</span></div>
+            <div class="text-4xl uppercase py-10 font-black text-center">Our Commitement <span class="text-[#00D897]">.</span></div>
             <div
-                class="flex flex-col gap-10 lg:flex lg:flex-row  justify-center items-center container mx-auto bg-[#BFCCD3] py-5 lg:py-20 px-5">
+                class="flex flex-col gap-10 lg:flex lg:flex-row  justify-center items-center container mx-auto bg-[#BFCCD3] py-5 lg:py-20 px-20">
                 <div class="w-1/2 lg:w-full"><img src="../Graphics/Commitment.svg" alt=""></div>
                 <div class="bg-slate-100 w-full">
                     
