--- a/Pages/about.html
+++ b/Pages/about.html
@@ -184,15 +184,15 @@
         <div class=" p-5 bg-white  md:p-2 dark:bg-gray-800" id="stats" role="tabpanel" aria-labelledby="stats-tab">
             <dl class="grid max-w-screen-xl grid-cols-3 gap-12 p-4 mx-auto text-gray-900 sm:grid-cols-3  dark:text-white sm:p-8">
                 <div class="flex flex-col items-center justify-center">
-                    <dt class="mb-2 text-3xl font-extrabold">73M+</dt>
-                    <dd class="text-gray-500 dark:text-gray-400">Developers</dd>
+                    <dt class="mb-2 text-3xl font-extrabold">2k+</dt>
+                    <dd class="text-gray-500 dark:text-gray-400">Stagiaires</dd>
                 </div>
                 <div class="flex flex-col items-center justify-center">
-                    <dt class="mb-2 text-3xl font-extrabold">100M+</dt>
-                    <dd class="text-gray-500 dark:text-gray-400">Public repositories</dd>
+                    <dt class="mb-2 text-3xl font-extrabold">400+</dt>
+                    <dd class="text-gray-500 dark:text-gray-400">Students</dd>
                 </div>
                 <div class="flex flex-col items-center justify-center">
-                    <dt class="mb-2 text-3xl font-extrabold">100M+</dt>
+                    <dt class="mb-2 text-xl font-extrabold">2M DH/YEAR</dt>
                     <dd class="text-gray-500 dark:text-gray-400">Public repositories</dd>
                 </div>
                 
