--- a/Pages/about.html
+++ b/Pages/about.html
@@ -26,19 +26,19 @@
             <div
                 class="z-50 container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
                 <ul class="z-50 flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
-                    <li class="z-50 transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class="z-50 transition-all duration-200 ease-in-out p-2 ">
                         <a class="text-slate-800 z-50  transition-all ease-in" href="../index.html">Home</a>
                     </li>
-                    <li class="z-50 transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class="z-50 transition-all duration-200 ease-in-out p-2 ">
                         <a class="text-slate-800 z-50   transition-al  ease-in" href="./about.html">About</a>
                     </li>
-                    <li class="z-50 transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class="z-50 transition-all duration-200 ease-in-out p-2 ">
                         <a class="text-slate-800 z-50  transition-all ease-in" href="#">Activities</a>
                     </li>
-                    <li class="z-50 transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class="z-50 transition-all duration-200 ease-in-out p-2 ">
                         <a class="text-slate-800 z-50  transition-all ease-in" href="./gallery.html">Gallery</a>
                     </li>
-                    <li class="z-50 transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class="z-50 transition-all duration-200 ease-in-out p-2 ">
                         <a class="text-slate-800 z-50  transition-all ease-in" href="./contact.html">Contact</a>
                     </li>
                 </ul>
@@ -50,9 +50,9 @@
     </header>
 
     <!-- Ofppt Section -->
-    <section class="py-20">
+    <section class="py-20 ">
         <div class="absolute z-[0] top-0 left-0 right-0 bottom-0"><img src="../Graphics/Gradient.png" alt=""></div>
-        <div class="container mx-auto ">
+        <div class="container mx-auto relative z-50">
             <div class="text-center text-4xl font-black text-slate-800 ">About<span class="text-[#00D897]">.</spa>
             </div>
             <div class="flex flex-col space-y-10 lg:flex lg:flex-row  py-20 justify-center items-center gap-5">
