--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -27,25 +27,25 @@
         <div
           class="container mx-auto right-0 z-50 nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
           <ul class="z-50 flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
-            <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+            <li class="transition-all duration-200 ease-in-out p-2 ">
               <a class="text-slate-800  transition-all ease-in" href="../index.html">Home</a>
             </li>
-            <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+            <li class="transition-all duration-200 ease-in-out p-2 ">
               <a class="text-slate-800   transition-all  ease-in" href="./about.html">About</a>
             </li>
-            <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+            <li class="transition-all duration-200 ease-in-out p-2 ">
               <a class="text-slate-800  transition-all ease-in" href="#">Activities</a>
             </li>
-            <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+            <li class="transition-all duration-200 ease-in-out p-2 ">
               <a class="text-slate-800  transition-all ease-in" href="./gallery.html">Gallery</a>
             </li>
-            <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+            <li class="transition-all duration-200 ease-in-out p-2 ">
               <a class="text-slate-800  transition-all ease-in" href="./contact.html">Contact</a>
             </li>
           </ul>
         </div>
         <div class="flex items-center gap-6">
-          <ion-icon class="absolute z-[100] text-3xl" onclick="onToggleMenu(this)" name="menu"
+          <ion-icon class="lg:hidden absolute z-[100] text-3xl" onclick="onToggleMenu(this)" name="menu"
             class="text-3xl cursor-pointer lg:hidden text-slate-800 hover:text-slate-200 transition-all duration-100 ease-in"></ion-icon>
         </div>
   </header>
