--- a/Pages/about.html
+++ b/Pages/about.html
@@ -33,7 +33,7 @@
                         <a class="text-slate-800 z-50   transition-al  ease-in" href="./about.html">About</a>
                     </li>
                     <li class="z-50 transition-all duration-200 ease-in-out p-2 ">
-                        <a class="text-slate-800 z-50  transition-all ease-in" href="#">Activities</a>
+                        <a class="text-slate-800 z-50  transition-all ease-in" href="./activities.html">Activities</a>
                     </li>
                     <li class="z-50 transition-all duration-200 ease-in-out p-2 ">
                         <a class="text-slate-800 z-50  transition-all ease-in" href="./gallery.html">Gallery</a>
@@ -50,16 +50,16 @@
     </header>
 
     <!-- Ofppt Section -->
-    <section class="py-20 ">
+    <section class="py-20">
         <div class="absolute z-[0] top-0 left-0 right-0 bottom-0"><img src="../Graphics/Gradient.png" alt=""></div>
-        <div class="container mx-auto relative z-50">
-            <div class="text-center text-4xl font-black text-slate-800 ">About<span class="text-[#00D897]">.</spa>
+        <div class="container mx-auto ">
+            <div class="z-50 relative text-center text-4xl font-black text-slate-800 ">About<span class="text-[#00D897]">.</spa>
             </div>
             <div class="flex flex-col space-y-10 lg:flex lg:flex-row  py-20 justify-center items-center gap-5">
-                <div class=" lg:w-10/12  flex justify-center"><img height="215px" src="../Graphics/ofppt_logo.png"
+                <div class="z-50 lg:w-10/12 flex justify-center"><img height="215px" src="../Graphics/ofppt_logo.png"
                         alt=""></div>
                 <div
-                    class="w-11/12  lg:w-3/4 flex justify-center bg-gradient-to-r shadow-2xl shadow-[#3F3D564D] from-slate-300 p-10 text-xl lg:text-2xl text-slate-700 font-semibold">
+                    class="z-50 w-11/12  lg:w-3/4 flex justify-center bg-gradient-to-r shadow-2xl shadow-[#3F3D564D] from-slate-300 p-10 text-xl lg:text-2xl text-slate-700 font-semibold">
                     L'Office de la formation professionnelle et de la promotion du travail (OFPPT) est un opérateur
                     public en formation
                     professionnelle, couvrant le territoire marocain.</div>
@@ -268,10 +268,7 @@
                     <div class="py-5 border-b border-gray-200 dark:border-gray-700">
                     <p class="mb-2 text-gray-500 dark:text-gray-400">We offer comprehensive career development services, including job placement assistance and guidance on further education and professional growth.
                     </p>
-                    <ul class="pl-5 text-gray-500 list-disc dark:text-gray-400">
-                        <li><a href="https://flowbite.com/pro/" class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite Pro</a></li>
-                        <li><a href="https://tailwindui.com/" rel="nofollow" class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a></li>
-                    </ul>
+                    
                     </div>
                 </div>
             </div>
@@ -348,8 +345,8 @@
     </section>
 
     <!-- HQE Batiment Section -->
-    <section class="py-20">
-        <div class="text-4xl uppercase py-10 font-black text-center text-slate-800 tracking-widest">HQE Batiment</div>
+    <section>
+        <div class="text-4xl uppercase py-5 font-black text-center text-slate-800 tracking-widest">HQE Batiment</div>
         <div class="flex flex-col container mx-auto space-y-10">
             <div
                 class="mx-auto p-14 bg-gradient-to-tr from-slate-300 w-1/2 text-center text-slate-800 text-2xl font-semibold  shadow-xl">
