--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -12,33 +12,33 @@
 
 </head>
 
-<body class="">
+<body class="background bg-slate-200 font-[Montserrat] overflow-x-hidden">
     <!-- Navigation Bar -->
-    <header class="px-3 container mx-auto transition-all duration-300 ease-in-out z-50">
-        <nav class="flex justify-between items-center py-8 mx-auto z-50">
-            <div
-                class="uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
-                <a href="../index.html">
-                    ista<br>Zenata<span class="text-white">.</span>
-                </a>
-            </div>
+    <header class="z-50 px-5 container mx-auto transition-all duration-300 ease-in-out">
+        <nav class="z-50 flex justify-between items-center py-8 mx-auto">
+          <div
+            class="z-50 uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
+            <a href="../index.html">
+              ista<br>Zenata<span class="text-white">.</span>
+            </a>
+          </div>
             <div
                 class="z-50 container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
                 <ul class="flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8 z-50">
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class="transition-all duration-200 ease-in-out p-2 ">
                         <a class="text-slate-800  transition-all ease-in" href="../index.html">Home</a>
                     </li>
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class="transition-all duration-200 ease-in-out p-2 ">
                         <a class="text-slate-800   transition-al  ease-in" href="./about.html">About</a>
                     </li>
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class="transition-all duration-200 ease-in-out p-2 ">
                         <a class="text-slate-800  transition-all ease-in" href="#">Activities</a>
                     </li>
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
+                    <li class="transition-all duration-200 ease-in-out p-2 ">
                         <a class="text-slate-800  transition-all ease-in" href="./gallery.html">Gallery</a>
                     </li>
-                    <li class="transition-all duration-200 ease-in-out p-2 hover:bg-slate-200 lg:hover:bg-opacity-50">
-                        <a class="text-slate-800  transition-all ease-in" href="./contact.html">Contact</a>
+                    <li class="transition-all duration-200 ease-in-out p-2 ">
+                        <a class="text-slate-800  transition-all ease-in" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -49,8 +49,9 @@
     </header>
 
     <!-- EMBED MAP  -->
+    <div class="absolute z-[0] top-0 left-0 right-0 bottom-0"><img src="../Graphics/Gradient.png" alt=""></div>
     <section class="text-slate-600 body-font  relative">
-        <div class="absolute inset-0 bg-gray-300">
+        <div class="absolute z-[-1] opacity-80 inset-0 bg-gray-300">
             <iframe width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="map"
                 scrolling="no"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.4825490054013!2d-7.452029418765826!3d33.64465647035059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7cb89d303dc37%3A0x7302fcec02a52895!2sISTA%20Zenata!5e0!3m2!1sen!2sma!4v1698178586923!5m2!1sen!2sma"
@@ -58,7 +59,7 @@
         </div>
         <div class="container px-5 py-24 mx-auto flex">
             <div
-                class="lg:w-1/3 md:w-1/2 bg-white rounded-lg p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10 shadow-md">
+                class="lg:w-1/3 md:w-1/2 bg-white  p-8 flex flex-col md:ml-auto w-full mt-10 md:mt-0 relative z-10 shadow-md">
                 <h2 class="text-slate-800 text-2xl uppercase mb-1 font-black tracking-widest title-font">Contact<span
                         class="text-4xl text-[#3AB795] ">.</span></h2>
                 <p class="leading-relaxed mb-5 text-slate-600">Ain harrouda , Zenata</p>
