--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -16,38 +16,44 @@
 
 <body class="background bg-slate-200 font-[Montserrat] overflow-x-hidden">
     <!-- Navigation Bar -->
-  <header class="z-50 px-3 container mx-auto transition-all duration-300 ease-in-out">
-      <nav class="z-50 flex justify-between items-center py-8 mx-auto">
-        <div
-          class="z-50 uppercase leading-6 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
-          <a href="../index.html">
-            ista<br>Zenata<span class="text-white">.</span>
-          </a>
-        </div>
-        <div
-          class="container mx-auto right-0 z-50 nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
-          <ul class="z-50 flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
-            <li class="transition-all duration-200 ease-in-out p-2 ">
-              <a class="text-slate-800  transition-all ease-in" href="../index.html">Home</a>
-            </li>
-            <li class="transition-all duration-200 ease-in-out p-2 ">
-              <a class="text-slate-800   transition-all  ease-in" href="./about.html">About</a>
-            </li>
-            <li class="transition-all duration-200 ease-in-out p-2 ">
-              <a class="text-slate-800  transition-all ease-in" href="#">Activities</a>
-            </li>
-            <li class="transition-all duration-200 ease-in-out p-2 ">
-              <a class="text-slate-800  transition-all ease-in" href="./gallery.html">Gallery</a>
-            </li>
-            <li class="transition-all duration-200 ease-in-out p-2 ">
-              <a class="text-slate-800  transition-all ease-in" href="./contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-        <div class="flex items-center gap-6">
-          <ion-icon class="lg:hidden absolute z-[100] text-3xl" onclick="onToggleMenu(this)" name="menu"
-            class="text-3xl cursor-pointer lg:hidden text-slate-800 hover:text-slate-200 transition-all duration-100 ease-in"></ion-icon>
-        </div>
+    <header class="z-50 px-5 container mx-auto transition-all duration-300 ease-in-out">
+      <nav class=" z-50 flex justify-between items-center py-8 mx-auto">
+          <div
+              class="uppercase leading-6 relative z-50 text-slate-800 font-black text-3xl hover:text-white hover:scale-105 hover:drop-shadow-xl transition-all  duration-200 ease-in">
+              <a href="./index.html">
+                  ista<br>Zenata<span class="text-white">.</span>
+              </a>
+          </div>
+          <div
+              class=" z-50 container mx-auto right-0  nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-xl lg:min-h-fit min-h-[70vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
+              <ul class="z-50 flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
+                  <li class=" transition-all duration-200 ease-in-out p-2">
+                      <a class="text-slate-800  transition-all ease-in"
+                          href="./index.html">Home</a>
+                  </li>
+                  <li class=" transition-all duration-200 ease-in-out p-2">
+                      <a class="text-slate-800   transition-al  ease-in"
+                          href="./Pages/about.html">About</a>
+                  </li>
+                  <li class=" transition-all duration-200 ease-in-out p-2">
+                      <a class="text-slate-800  transition-all ease-in"
+                          href="./Pages/activities.html">Activities</a>
+                  </li>
+                  <li class=" transition-all duration-200 ease-in-out p-2">
+                      <a class="text-slate-800  transition-all ease-in"
+                          href="./Pages/gallery.html">Gallery</a>
+                  </li>
+                  <li class=" transition-all duration-200 ease-in-out p-2">
+                      <a class="text-slate-800  transition-all ease-in"
+                          href="./Pages/contact.html">Contact</a>
+                  </li>
+              </ul>
+          </div>
+          <div class="flex items-center gap-6">
+              <ion-icon class="lg:hidden relative z-50 text-3xl" onclick="onToggleMenu(this)" name="menu"
+                  class="text-3xl cursor-pointer lg:hidden text-slate-800 hover:text-slate-200 transition-all duration-100 ease-in"></ion-icon>
+          </div>
+          </nav>
   </header>
 
     <!-- Video Background Section -->
@@ -65,19 +71,7 @@
   </section>
 
 
-  <div class="flex items-center justify-center py-4 md:py-8 flex-wrap">
-    <button type="button"
-      class="text-blue-700 hover:text-white border border-blue-600 bg-white hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:bg-gray-900 dark:focus:ring-blue-800">All
-      categories</button>
-    <button type="button"
-      class="text-gray-900 border border-white hover:border-gray-200 dark:border-gray-900 dark:bg-gray-900 dark:hover:border-gray-700 bg-white focus:ring-4 focus:outline-none focus:ring-gray-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:text-white dark:focus:ring-gray-800">Shoes</button>
-    <button type="button"
-      class="text-gray-900 border border-white hover:border-gray-200 dark:border-gray-900 dark:bg-gray-900 dark:hover:border-gray-700 bg-white focus:ring-4 focus:outline-none focus:ring-gray-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:text-white dark:focus:ring-gray-800">Bags</button>
-    <button type="button"
-      class="text-gray-900 border border-white hover:border-gray-200 dark:border-gray-900 dark:bg-gray-900 dark:hover:border-gray-700 bg-white focus:ring-4 focus:outline-none focus:ring-gray-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:text-white dark:focus:ring-gray-800">Electronics</button>
-    <button type="button"
-      class="text-gray-900 border border-white hover:border-gray-200 dark:border-gray-900 dark:bg-gray-900 dark:hover:border-gray-700 bg-white focus:ring-4 focus:outline-none focus:ring-gray-300 rounded-full text-base font-medium px-5 py-2.5 text-center mr-3 mb-3 dark:text-white dark:focus:ring-gray-800">Gaming</button>
-  </div>
+  
   <!-- gallery Section -->
   <section class="bg-slate-200 relative z-50">
     <div class=" mx-auto ">
@@ -115,7 +109,7 @@
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
                             <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
-                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="ll.JPG" loading="lazy">
+                            <img alt="gallery" class="absolute inset-0 lg:w-full h-full w-[560px] h-[196px] object-cover object-center" src="ll.JPG" loading="lazy">
                             <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                               <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                               <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
@@ -240,7 +234,7 @@
 
 
     <!-- Prominent moments Section -->
-  <section class="py-20">
+  <section class="bg-slate-200 py-20">
     <div class=" mx-auto ">
         <div class="text-center text-4xl font-black text-slate-800 ">Most Prominent moments
         </div>
