--- a/Pages/activities.html
+++ b/Pages/activities.html
@@ -41,11 +41,11 @@
                         </li>
                         <li class=" transition-all duration-200 ease-in-out p-2">
                             <a class="text-slate-800  transition-all ease-in"
-                                href="./gallery.html">Gallery</a>
+                                href="./Pages/gallery.html">Gallery</a>
                         </li>
                         <li class=" transition-all duration-200 ease-in-out p-2">
                             <a class="text-slate-800  transition-all ease-in"
-                                href="./contact.html">Contact</a>
+                                href="./Pages/contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -67,7 +67,7 @@
 
     <!-- chess -->
     <div class="flex py-10 items-center justify-center">
-        <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-3">
+        <div class="grid grid-cols-1 gap-5  lg:grid-cols-3">
             <!-- chess -->
           <div class="group relative cursor-pointer items-center justify-center overflow-hidden transition-shadow hover:shadow-xl hover:shadow-black/30">
             <div class="h-96 w-72">
@@ -106,10 +106,151 @@
         <section class="h-full">
             <div class="container mx-auto justify-center items-center h-full text-slate-800 ">
                 <div class="text-4xl uppercase py-10 font-black text-center">SUBMIT FORM<span class="text-[#00D897]">.</span></div>
-                    <div class="flex flex-col lg:flex lg:flex-col-reverse gap-10 lg:flex lg:flex-row  justify-center items-center container mx-auto bg-[#BFCCD3] py-20 lg:py-20 px-20">
-
-                    </div>
+                    <div class="flex flex-col lg:flex lg:flex-col gap-10 lg:flex lg:flex-row  justify-center items-center container mx-auto bg-[#BFCCD3] py-20 lg:py-20 px-20">
+                        <div class="mb-1">
+                            <input type="text" id="large-input" placeholder="Name" class="block w-[400px] lg:w-[600px] p-4 text-gray-900 border border-gray-300  bg-slate-100 sm:text-md">
+                        </div>
+                        <div>
+                            <input type="text" id="large-input" placeholder="Class" class="block w-[400px] lg:w-[600px] p-4 text-gray-900 border border-gray-300 bg-slate-100 sm:text-md ">
+                        </div>
+                        <div class="mx-auto w-full flex flex-row items-center justify-center lg:space-x-24 space-x-12">
+                        <button class="bg-gray-600 text-white uppercase font-bold shadow-2xl py-4 px-8 border-4 focus:ring-2 ring-gray-600">
+                            Chess
+                        </button>
+                        <button class="bg-green-500 text-white uppercase font-bold shadow-2xl py-4 px-8 border-4 focus:ring-2 ring-green-500">
+                            Soccer
+                        </button>
+                        <button class="bg-orange-600 text-white uppercase font-bold shadow-2xl py-4 px-8 border-4 focus:ring-2 ring-orange-600">
+                            Paint
+                        </button>
+                        </div>
+                    <div class=""><a class="bg-[#00D897] py-3 px-8 hover:scale-110  hover:tracking-[0.2em] transition-all duration-300 ease-in-out  text-slate-800 uppercase text-2xl font-extrabold shadow-lg shadow-[#00D8974D]"
+                            href="#">Submit</a></div>
+                </div>
+            </div>      
         </section>
+
+        <!-- Footer -->
+    <footer class="text-slate-600 body-font">
+        <div
+          class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-nowrap flex-wrap flex-col">
+          <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
+            <a class="flex title-font font-medium items-center md:justify-start justify-center text-slate-900">
+              <img width="150px" src="./Graphics/ISTA ZENATA.png" alt="">
+            </a>
+            <p class="mt-2 text-sm text-slate-500">L'etablissement de L'ISTA ZENATA</p>
+          </div>
+          <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+              <h2 class="title-font font-medium text-slate-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
+              <nav class="list-none mb-10">
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">First Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Second Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Third Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Fourth Link</a>
+                </li>
+              </nav>
+            </div>
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+              <h2 class="title-font font-medium text-slate-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
+              <nav class="list-none mb-10">
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">First Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Second Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Third Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Fourth Link</a>
+                </li>
+              </nav>
+            </div>
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+              <h2 class="title-font font-medium text-slate-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
+              <nav class="list-none mb-10">
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">First Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Second Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Third Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Fourth Link</a>
+                </li>
+              </nav>
+            </div>
+            <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+              <h2 class="title-font font-medium text-slate-900 tracking-widest text-sm mb-3">CATEGORIES</h2>
+              <nav class="list-none mb-10">
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">First Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Second Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Third Link</a>
+                </li>
+                <li>
+                  <a class="text-slate-600 hover:text-slate-800">Fourth Link</a>
+                </li>
+              </nav>
+            </div>
+          </div>
+        </div>
+        <div class="bg-slate-100">
+          <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+            <p class="text-slate-500 text-sm text-center sm:text-left">© 2023 Ista Zenata —
+              <a href="https://github.com/kourdroid/ista/" rel="noopener noreferrer" class="text-slate-600 ml-1"
+                target="_blank">@Collaborators</a>
+            </p>
+            <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+              <a class="text-slate-500 hover:text-[#00D897] cursor-pointer">
+                <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
+                  viewBox="0 0 24 24">
+                  <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+                </svg>
+              </a>
+              <a class="ml-3 text-slate-500 hover:text-[#00D897] cursor-pointer">
+                <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
+                  viewBox="0 0 24 24">
+                  <path
+                    d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+                  </path>
+                </svg>
+              </a>
+              <a class="ml-3 text-slate-500 hover:text-[#00D897] cursor-pointer">
+                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  class="w-5 h-5" viewBox="0 0 24 24">
+                  <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                  <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+                </svg>
+              </a>
+              <a class="ml-3 text-slate-500 hover:text-[#00D897] cursor-pointer">
+                <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0"
+                  class="w-5 h-5" viewBox="0 0 24 24">
+                  <path stroke="none"
+                    d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+                  <circle cx="4" cy="4" r="2" stroke="none"></circle>
+                </svg>
+              </a>
+            </span>
+          </div>
+        </div>
+    </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.1/flowbite.min.js"></script>
 <script src="./gallery.js"></script>
 </body>
