--- a/Pages/about.html
+++ b/Pages/about.html
@@ -346,7 +346,7 @@
 
     <!-- HQE Batiment Section -->
     <section>
-        <div class="text-4xl uppercase py-5 font-black text-center text-slate-800 tracking-widest">HQE Batiment</div>
+        <div class="text-4xl uppercase py-5 font-black text-center text-slate-800 tracking-widest">HQE Batiment<span class="text-[#00D897] text-4xl">.</span></div>
         <div class="flex flex-col container mx-auto space-y-10">
             <div
                 class="mx-auto p-14 bg-gradient-to-tr from-slate-300 w-1/2 text-center text-slate-800 text-2xl font-semibold  shadow-xl">
